; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/cgame/extr_cg_consolecmds.c_CG_TargetCommand_f.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/cgame/extr_cg_consolecmds.c_CG_TargetCommand_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"gc %i %i\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CG_TargetCommand_f() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [4 x i8], align 1
  %3 = call i32 (...) @CG_CrosshairPlayer()
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  br label %15

7:                                                ; preds = %0
  %8 = getelementptr inbounds [4 x i8], [4 x i8]* %2, i64 0, i64 0
  %9 = call i32 @trap_Argv(i32 1, i8* %8, i32 4)
  %10 = load i32, i32* %1, align 4
  %11 = getelementptr inbounds [4 x i8], [4 x i8]* %2, i64 0, i64 0
  %12 = call i32 @atoi(i8* %11)
  %13 = call i32 @va(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %12)
  %14 = call i32 @trap_SendConsoleCommand(i32 %13)
  br label %15

15:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @CG_CrosshairPlayer(...) #1

declare dso_local i32 @trap_Argv(i32, i8*, i32) #1

declare dso_local i32 @trap_SendConsoleCommand(i32) #1

declare dso_local i32 @va(i8*, i32, i32) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
